[rukmal] finished learning method overview

--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
 \usepackage{subfiles}
 
 % Page margin settings
+% Note: Add "showframe" option to see margins
 \usepackage[left=0.5in, right=0.5in, top=0.75in, bottom=0.75in]{geometry}
 
 % Headers
@@ -60,7 +61,7 @@
 \subfile{sections/04_model_data}
 
 % Unsupervised Learning Methods Survey
-\subfile{sections/05_unsupervised_learning_methods_survey}
+\subfile{sections/05_learning_methods_survey}
 
 % Hierarchical Clustering Model
 \subfile{sections/06_hierarchical_clustering_model}
