--- a/references.bib
+++ b/references.bib
@@ -199,7 +199,6 @@
 @misc{U.S.SecuritiesandExchangeCommission2019Form10-K,
     title = {{Form 10-K}},
     year = {2019},
-    booktitle = {testing},
     author = {{U.S. Securities and Exchange Commission}},
     url = {https://www.sec.gov/fast-answers/answers-form10khtm.html}
 }
@@ -231,6 +230,21 @@
     author = {{Google Research}},
     url = {http://colab.research.google.com},
     address = {Mountain View}
+}
+
+@article{Ward1963HierarchicalFunction,
+    title = {{Hierarchical Grouping to Optimize an Objective Function}},
+    year = {1963},
+    journal = {Journal of the American Statistical Association},
+    author = {Ward, Joe H. and {Jr.}},
+    number = {301},
+    month = {3},
+    pages = {236},
+    volume = {58},
+    publisher = {Taylor {\&} Francis, Ltd.American Statistical Association},
+    url = {https://www.jstor.org/stable/2282967?origin=crossref},
+    doi = {10.2307/2282967},
+    issn = {01621459}
 }
 
 @techreport{OfficeofStatisticalStandards-BureauoftheBudget1957HistoryClassification,
@@ -276,6 +290,20 @@
     author = {Weerawarana, Rukmal and Zhu, Yiyi and He, Yuzhen},
     url = {https://colab.research.google.com/drive/1MvcyrTJW05tH09-bpFY46o6b2KWO_rm1},
     address = {New York}
+}
+
+@article{Lloyd1982LeastPCM,
+    title = {{Least squares quantization in PCM}},
+    year = {1982},
+    journal = {IEEE Transactions on Information Theory},
+    author = {Lloyd, S.},
+    number = {2},
+    month = {3},
+    pages = {129--137},
+    volume = {28},
+    url = {http://ieeexplore.ieee.org/document/1056489/},
+    doi = {10.1109/TIT.1982.1056489},
+    issn = {0018-9448}
 }
 
 @article{Huang2007MarketingClustering,
@@ -388,6 +416,16 @@
     volume = {22},
     url = {https://www.sciencedirect.com/science/article/abs/pii/S0954349X11000208},
     doi = {10.1016/j.strueco.2011.03.001}
+}
+
+@article{Ben-Hur2001SupportClustering,
+    title = {{Support vector clustering}},
+    year = {2001},
+    journal = {Journal of machine learning research},
+    author = {Ben-Hur, Asa and Horn, David and Siegelmann, Hava T and Vapnik, Vladimir},
+    number = {Dec},
+    pages = {125--137},
+    volume = {2}
 }
 
 @article{Modigliani1958TheInvestment,
