--- a/resources/header.tex
+++ b/resources/header.tex
@@ -120,7 +120,7 @@
 % Blank page without messing up page numbers
 % Page right after title with project info
 %===========================================
-
+\usepackage{multicol}
 % See: https://tex.stackexchange.com/questions/36880/insert-a-blank-page-after-current-page
 \newcommand{\innerCover}{
     \vspace*{\fill}
