--- a/sections/03_literature_review.tex
+++ b/sections/03_literature_review.tex
@@ -36,7 +36,7 @@ While not directly applied to the specific research problem of Market Sectorizat
 
 The authors' results confirm that the existence of pre-determined groupings of assets significantly affects the correlation distribution of those assets over time. Treating the geographic location of markets as a proxy for a generalized pre-existing group, we can extrapolate these effects to the more localized United States market. This generalization suggests that the existing sector groups would have a significant effect on the historical returns of companies in a given sector. This in turn implies that the usage of historical asset returns would introduce bias from existing sector groups to a new heuristic.
 
-\textit{Marketing segmentation using support vector clustering}\citeFormat{\cite{Huang2007MarketingClustering}} explores the application of a support vector clustering (a permutation of the support vector machine) to a relatively low-dimensional marketing dataset to derive clusters. The support vector clustering method is parametrized with a cluster count, and a random initialization of cluster centroids. Additionally, support vector clustering does not guarantee cluster assignment for all data points, and outliers remain unclassified. This approach is then compared to a $k$-means clustering and self-organizing feature map (SOFM) method, and is found to perform better based on a mean and standard error index evaluation. Despite appearing to be a promising approach in the authors' sample case study, the support vector clustering algorithm's cluster count parameterization, and its treatment of outliers do not make it suitable for the problem of market sectorization.
+\textit{Marketing segmentation using support vector clustering}\citeFormat{\cite{Huang2007MarketingClustering}} explores the application of a support vector clustering (a permutation of the support vector machine) to a relatively low-dimensional marketing dataset to derive clusters. The support vector clustering method is parametrized with a cluster count, and a random initialization of cluster centroids. Additionally, support vector clustering does not guarantee cluster assignment for all data points, and outliers remain unclassified. This approach is then compared to a $K$-means clustering and self-organizing feature map (SOFM) method, and is found to perform better based on a mean and standard error index evaluation. Despite appearing to be a promising approach in the authors' sample case study, the support vector clustering algorithm's cluster count parameterization, and its treatment of outliers do not make it suitable for the problem of market sectorization.
 
 The authors of \textit{A purchase-based market segmentation methodology}\citeFormat{\cite{Tsai2004AMethodology}} apply a genetic algorithm to cluter transactional purchase data from a set of customers, with the end goal of training an RFM (Recency, Frequency, Monetary Value) model. The genetic algorithm, along with a cost function to assess the fidelity of fit, is used to segment customers into unique clusters based on their purchasing data. The iterative and stochastic behavior of the genetic algorithm ensures that the resulting cluster assignments are extremely stable, while also being nonvariant with respect to centroid initialization. However, as with the previously discussed support vector clustering method, this approach is hindered by the required prior specification of a cluster count, as well as not being hierarchical in nature.
 
