--- a/sections/10_conclusion.tex
+++ b/sections/10_conclusion.tex
@@ -35,7 +35,7 @@ In this section, we will reiterate our main findings, and relate them back to ou
 
 \begin{itemize}
     \item In the first portion of the report, we begin to address RG-1 goal by outlining our target data sources (see Section~\ref{model_data}), the benchmark we plan to use for comparison, and how our specifically selected fields from our data sources relate to, and reinforce our research objective.
-    \item Following this, we recognized that in order to maintain the level of objectivity enforced by RG-1, we would have to use an unsupervised learning method to determine our candidate learned sector universes. To this end, we conducted a survey of potential methodologies and identified Hierarchical Clustering as our target methodology in Section~\ref{unsupervised_learning_methods_survey}.
+    \item Following this, we recognized that in order to maintain the level of objectivity enforced by RG-1, we would have to use an unsupervised learning method to determine our candidate learned sector universes. To this end, we conducted a survey of potential methodologies and identified Hierarchical Clustering as our target methodology in Section~\ref{learning_methods_survey}.
     \item In Section~\ref{hierarchical_clustering_model}, we parameterized our HCA heuristic, and identified our search space consisting of 60 candidate learned sector universes. We then computed a set of candidate learned sector universes, fully addressing RG-1.
 \end{itemize}
 
