[rukmal] finished hca model; we're done!

--- a/references.bib
+++ b/references.bib
@@ -84,6 +84,21 @@
     address = {Boston}
 }
 
+@article{Defays1977AnMethod,
+    title = {{An efficient algorithm for a complete link method}},
+    year = {1977},
+    journal = {The Computer Journal},
+    author = {Defays, D.},
+    number = {4},
+    month = {4},
+    pages = {364--366},
+    volume = {20},
+    publisher = {Narnia},
+    url = {https://academic.oup.com/comjnl/article-lookup/doi/10.1093/comjnl/20.4.364},
+    doi = {10.1093/comjnl/20.4.364},
+    issn = {0010-4620}
+}
+
 @techreport{CapitalAdd-On,
     title = {{Capital IQ Premium Financials-Understanding the Data Debt Capital Structure Add-On}},
     url = {https://wrds-www.wharton.upenn.edu/documents/939/Understanding_The_Data_-_Capital_Structure_ELGoxJs.pdf}
@@ -398,12 +413,50 @@
     address = {New York}
 }
 
+@article{Pedregosa2011Scikit-learn:Python,
+    title = {{Scikit-learn: Machine Learning in Python}},
+    year = {2011},
+    journal = {Journal of Machine Learning Research},
+    author = {Pedregosa, Fabian and Varoquaux, Gaël and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, Édouard},
+    number = {Oct},
+    pages = {2825--2830},
+    volume = {12},
+    url = {http://jmlr.csail.mit.edu/papers/v12/pedregosa11a.html}
+}
+
 @techreport{Sifma2018SIFMAPrimer,
     title = {{SIFMA Insights - US ETF Market Structure Primer}},
     year = {2018},
     author = {{Sifma}},
     pages = {25},
     url = {https://www.sifma.org/insights}
+}
+
+@article{Seifoddini1989SingleApplications,
+    title = {{Single linkage versus average linkage clustering in machine cells formation applications}},
+    year = {1989},
+    journal = {Computers {\&} Industrial Engineering},
+    author = {Seifoddini, Hamid K},
+    number = {3},
+    pages = {419--426},
+    volume = {16},
+    publisher = {Elsevier},
+    issn = {0360-8352}
+}
+
+@article{Sibson1973SLINK:Method,
+    title = {{SLINK: An optimally efficient algorithm for the single-link cluster method}},
+    year = {1973},
+    journal = {The Computer Journal},
+    author = {Sibson, R.},
+    number = {1},
+    month = {1},
+    pages = {30--34},
+    volume = {16},
+    publisher = {Narnia},
+    url = {https://academic.oup.com/comjnl/article-lookup/doi/10.1093/comjnl/16.1.30},
+    doi = {10.1093/comjnl/16.1.30},
+    issn = {0010-4620}
 }
 
 @article{Hicks2011StructuralClassification,
