[rukmal] fixed page numbering issue; intelligently puts in blank page now

--- a/main.tex
+++ b/main.tex
@@ -42,6 +42,7 @@
 \newpage
 
 % Setting page numbering to arabic
+\clearemptydoublepage
 \pagenumbering{arabic}
 
 % This is where files are included, in order as necessary
