--- a/resources/glossary.tex
+++ b/resources/glossary.tex
@@ -49,10 +49,10 @@
     description={The dollar-value change of constituent SETF turnover incurred when a portfolio of SETFs is rebalanced}
 }
 
-\newglossaryentry{hca}
+\newglossaryentry{HCA}
 {
     name=HCA,
-    description={Hierarchical clustering algorithm/analysis}
+    description={Hierarchical clustering analysis model}
 }
 
 \newglossaryentry{SIC}
