[rukmal] finished abstract, working on spell check and final formatting now

--- a/references.bib
+++ b/references.bib
@@ -112,7 +112,7 @@
 }
 
 @misc{SPGlobalMarketIntelligence2019CompustatIntelligence,
-    title = {{Compustat Data from S{\&}amp;P Global Market Intelligence}},
+    title = {{Compustat Data from S{\&}P Global Market Intelligence}},
     year = {2019},
     author = {{S{\&}P Global Market Intelligence}},
     publisher = {S{\&}P Global Market Intelligence},
