--- a/sections/01_introduction.tex
+++ b/sections/01_introduction.tex
@@ -8,15 +8,15 @@ The United States today is home to approximately 20,000 publicly traded corporat
 
 To this end, market sectors and the practice of sectorization have been an integral component of healthy markets, both in the United States and around the world. Market Sectors - in their ideal form - group together corporations of similar business function and economic operating arena for easier regulation, management, investment, etc. A related practice to that of market sectorization is Market Segmentation, the practice of dividing a market into subgroups of consumers (i.e. \textit{segments}).
 
-The evolution of Market Segments and Market Sectors have historically been extremely useful metrics for gauging the development of the economy. There are four generally accepted stages of evolution in market segmentation; fragmentation, unification, segmentation, and hyper-segmentation.\citeFormat{\cite{Tedlow1996NewAmerica}} The United States economy - being the archetype on which this four-stage heuristic was built - developed through these four stages over the course of the last two centuries. Being a decidedly \textit{hyper-segmented} market today, there is a marked shift toward ever more narrow market segments. This shift has notably been amplified by the enablement of hyper-targeted marketing and product delivery by technologies such as the smartphone.
+The evolution of Market Segments and Market Sectors have historically been extremely useful metrics for gauging the development of the economy. There are four generally accepted stages of evolution in market segmentation; fragmentation, unification, segmentation, and hyper-segmentation.\citeFormat{\cite{Tedlow1996NewAmerica}} The United States economy - being the archetype on which this four-stage heuristic was built - developed through these four stages over the course of the last two centuries. Being a decidedly \textit{hyper-segmented} market today, there is a marked shift toward ever more narrow market segments. This shift has notably been amplified by the enable of hyper-targeted marketing and product delivery by technologies such as the smartphone.
 
 \section{Applications of Market Sectors}
 
-The United States Government began classifying companies into segments and sub-groups with the introduction of the Standard Industrial Classification (hereafter \textit{SIC}) system in 1937.\citeFormat{\cite{OfficeofStatisticalStandards-BureauoftheBudget1957HistoryClassification}} Certainly, the effective classification of companies is a key prerequisite to scalable monitoring and governance. The sheer scope of the modern economy guarantees the necessity of such classificaitons; the current scope of the economy spans - indisputably - all facets of Human culture. This gargantuan scope demands specialization, which - in turn - demands organization; motivating the need for market sectors.
+The United States Government began classifying companies into segments and sub-groups with the introduction of the Standard Industrial Classification (hereafter \textit{SIC}) system in 1937.\citeFormat{\cite{OfficeofStatisticalStandards-BureauoftheBudget1957HistoryClassification}} Certainly, the effective classification of companies is a key prerequisite to scalable monitoring and governance. The sheer scope of the modern economy guarantees the necessity of such classifications; the current scope of the economy spans - indisputably - all facets of Human culture. This gargantuan scope demands specialization, which - in turn - demands organization; motivating the need for market sectors.
 
-Credit rating is the practice of evaluating the risk of a prospective counterparty in a transaciton. This metric is integral to risk management, ånd relies on evaluating the probability that a candidate counterparty to a transaction will not default on their obligation. In addition to the idiosyncratic forces affecting any given corporation, its risks are often decomposed to market factors and - increasingly - market sector factors. This means that a positive outlook on a specific market sector would imply a more positive outlook for the consituent corporations composing that sector, underscoring the importance of appropriate and accurate sector assignment. The significance of accurate sector assignments is reaffirmed by the fact that all of the \textit{Big 3} credit rating agencies cite market sector rating as a key component in determining credit ratings.\citeFormat{\cite{StandardPoorsRatingServices2014CorporateMethodology}}\citeFormat{\cite{Hill2016FinancialMethodology}}\citeFormat{\cite{FitchRatings2019ProceduresRatings}}
+Credit rating is the practice of evaluating the risk of a prospective counterparty in a transaction. This metric is integral to risk management, and relies on evaluating the probability that a candidate counterparty to a transaction will not default on their obligation. In addition to the idiosyncratic forces affecting any given corporation, its risks are often decomposed to market factors and - increasingly - market sector factors. This means that a positive outlook on a specific market sector would imply a more positive outlook for the constituent corporations composing that sector, underscoring the importance of appropriate and accurate sector assignment. The significance of accurate sector assignments is reaffirmed by the fact that all of the \textit{Big 3} credit rating agencies cite market sector rating as a key component in determining credit ratings.\citeFormat{\cite{StandardPoorsRatingServices2014CorporateMethodology}}\citeFormat{\cite{Hill2016FinancialMethodology}}\citeFormat{\cite{FitchRatings2019ProceduresRatings}}
 
-Finally, another major application of asset sectors is to provide investors with targeted exposure to specific segments of hte the market. It is a well-known corollary of Modern Portfolio Theory that diversification provides savings an enhanced risk-return portfolio for any given basket of assets.\citeFormat{\cite{Markowitz1952PortfolioSelection}} This, combined with the excellent cost savings provided by modern Exchange Traded Funds (hereafter \textit{ETFs}), has led to a rapid prolification of these products in the Financial System today.
+Finally, another major application of asset sectors is to provide investors with targeted exposure to specific segments of the the market. It is a well-known corollary of Modern Portfolio Theory that diversification provides savings an enhanced risk-return portfolio for any given basket of assets.\citeFormat{\cite{Markowitz1952PortfolioSelection}} This, combined with the excellent cost savings provided by modern Exchange Traded Funds (hereafter \textit{ETFs}), has led to a rapid prolification of these products in the Financial System today.
 
 \section{Status Quo} \label{introduction:status_quo}
 
@@ -34,7 +34,7 @@ In the United States today, there are myriad sectorization taxonomies (hereafter
     \label{fig:introduction:gics_breakdown}
 \end{wrapfigure}
 
-The GICS (Global Industry Classification Standard)\citeFormat{\cite{MSCI-MorganStanleyCapitalInternational2019GICSMSCI}} is published by MSCI (Morgan Stanley Capital International) and S\&P (Standard \& Poor's). This classification is arguably the most widely used sector universe in the United States, and provides the basis for the poular S\&P 500 Market Sectors and Market Sector ETFs used in popular financial analysis resources.
+The GICS (Global Industry Classification Standard)\citeFormat{\cite{MSCI-MorganStanleyCapitalInternational2019GICSMSCI}} is published by MSCI (Morgan Stanley Capital International) and S\&P (Standard \& Poor's). This classification is arguably the most widely used sector universe in the United States, and provides the basis for the popular S\&P 500 Market Sectors and Market Sector ETFs used in popular financial analysis resources.
 
 Corporations are divided into four different categories, each in increasing order of specificity. The first classification is its \textit{sector} (the most general), followed by the \textit{industry group}, \textit{industry}, and finally \textit{sub-industry}, the most specific. The hierarchical taxonomy of these sector classifications are displayed in Figure~\ref{fig:introduction:gics_breakdown}\citeFormat{\cite{MSCI-MorganStanleyCapitalInternational2019GICSMSCI}}.
 
@@ -44,7 +44,7 @@ Additionally, the GICS methodology specification indicates that sector assignmen
 
 \begin{itemize}
     \item Media companies were moved from \textit{Consumer Discretionary} to \textit{Communication Services}
-    \item Internet services comapnies were moved from \textit{Information Technology} to \textit{Communication Services}
+    \item Internet services companies were moved from \textit{Information Technology} to \textit{Communication Services}
     \item E-Commerce companies were moved from \textit{Information Technology} to \textit{Consumer Discretionary}
 \end{itemize}
 
@@ -53,7 +53,7 @@ Additionally, the GICS methodology specification indicates that sector assignmen
 The ICB (Industry Classification Benchmark)\citeFormat{\cite{FTSEInternationalLimited2019IndustryRussell}} is published by FTSE International (previously jointly owned by Dow Jones and FTSE). Similarly to the GICS, the ICB also classifies corporations into four increasingly specific categories; \textit{industry} (the most general), \textit{supersector}, \textit{sector}, and finally \textit{subsector}, the most specific. A visualization of the ICB taxonomy is reproduced in Figure~\ref{fig:introduction:icb_breakdown}\citeFormat{\cite{FTSEInternationalLimited2019IndustryRussell}}.
 
 
-Similar to the GICS, ICB too utilizes three main criteria when classifying companies into specific sectors, and other cateogries. They are; the primary source of revenue, description in annual filings, and - in the case of a new company - information derived from the company prospectus, or regulatory filing descriptions (company-supplied).
+Similar to the GICS, ICB too utilizes three main criteria when classifying companies into specific sectors, and other categories. They are; the primary source of revenue, description in annual filings, and - in the case of a new company - information derived from the company prospectus, or regulatory filing descriptions (company-supplied).
 
 
 \section{Key Limitations} \label{introduction:key_limitations}
@@ -72,10 +72,10 @@ In this section, we analyze the GICS and ICB sector classification schemes descr
 
 As discussed above, both GICS and ICB utilize information from company prospectuses to determine an initial sector assignment. Unfortunately, this inherently implies that the initial classification is not based on an objective criteria, and is highly subject to the initial vision of the authors of the company prospectus. This is in stark contrast to utilizing a company-specific quantifiable metric, and relies on accurate reporting in the initial prospectus; a document whose authors are highly incentivized to inflate in grandiosity.
 
-Furthermore, the initial sector groups and constituent sectors in both classification schemes are defined based on a qualitative analysis of the economy, as opposed to a quantitatively-driven process. Similarly, the number of sectors in the market is also aribtrary, and not based on a quantifiable or objective metric.
+Furthermore, the initial sector groups and constituent sectors in both classification schemes are defined based on a qualitative analysis of the economy, as opposed to a quantitatively-driven process. Similarly, the number of sectors in the market is also arbitrary, and not based on a quantifiable or objective metric.
 
-Additionally, as implied by the reorganization of the GICS classification scheme in 2018, there appears to be no stong objective criteria governing the creation and deletion of new sectors. The companies reassigned during this reorganization were not new, and imply that the underlying newly created sector existed before its recognition by the GICS scheme.
+Additionally, as implied by the reorganization of the GICS classification scheme in 2018, there appears to be no strong objective criteria governing the creation and deletion of new sectors. The companies reassigned during this reorganization were not new, and imply that the underlying newly created sector existed before its recognition by the GICS scheme.
 
-As evidenced by the short list of limitations outlined in this section, the status quo of market sector classificaitons are far from perfect. To this end, we hope to develop a new \textit{Learned Sectors} scheme, addressing each of the limitations described above.
+As evidenced by the short list of limitations outlined in this section, the status quo of market sector classifications are far from perfect. To this end, we hope to develop a new \textit{Learned Sectors} scheme, addressing each of the limitations described above.
 
 \end{document}
